version 1.9.2, in progress
- New command "fractint" (fractional integration test)
- The "pergm" command no longer does fractional integration
  testing as a side-effect
- The "open" command now supports http to get a data file
  (of any supported format) from the web
- New function invmills() to get the inverse Mills ratio
- New accessor $mnl_probs to get the estimated outcome
  probabilities for a multinomial logit model
- Fix for multinomial logit: correct bias in favor of the
  base case in the reported fitted values ($yhat)  
- Fix bug 3021540 (sorting dataset)
- Fix bug 3021854 (spreadsheet import with no numeric data)
- Fix crashing bug in Wilcoxon signed rank test
- Fix for OS X: we now support Ctrl-click as equivalent to
  right-click (for popup menus, etc.)
- Fix for finding user's customized LaTeX preamble file 
- Internals: modify GUI sources to ensure that gretl will build 
  OK with the forthcoming GTK+ 3.0

2010-06-24 version 1.9.1
- New command: "makepkg", for command-line creation of gretl
  function packages (.gfn files)
- pdf, cdf and pvalue functions: add support for the
  Generalized Error distribution
- "dataset" command: add new sub-command, "renumber", for
  moving a series to a new position
- wls: amend the criterion for complaining that the weights
  are all zero
- logit/probit: correct ordering of estimates when the
  constant is not first in the supplied list of regressors
- Reading gdt data files: don't stop if a denormalized tiny
  value is found: accept what the C library gives and ignore
  errno
- Reinstate --basque start-up option for GUI program
- Fix for printing of month names on time-series plots in
  locales with multi-byte characters
- OS X: use the native Mac calculator app for gretl's
  calculator toolbar item by default
- GUI: add mechanism for defining named lists, and for
  setting the main window selection from a chosen list
- GUI: "Edit attributes" (of series) dialog: add option