@@ -6,7 +6,8 @@ version 1.9.2, in progress
   (of any supported format) from the web
 - New function invmills() to get the inverse Mills ratio
 - New accessor $mnl_probs to get the estimated outcome
-  probabilities for a multinomial logit model
+  probabilities for a multinomial logit model (plus GUI
+  access under the Analysis menu in the model window)
 - Fix for multinomial logit: correct bias in favor of the
   base case in the reported fitted values ($yhat)  
 - Fix bug 3021540 (sorting dataset)
@@ -15,6 +16,8 @@ version 1.9.2, in progress
 - Fix for OS X: we now support Ctrl-click as equivalent to
   right-click (for popup menus, etc.)
 - Fix for finding user's customized LaTeX preamble file 
+- Fix: more rigorous detection of whether TeX output is PDF
+  rather than DVI
 - Internals: modify GUI sources to ensure that gretl will build 
   OK with the forthcoming GTK+ 3.0
 
